welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:6: error: reassignment to val
      max = element
          ^extrema:8: error: not found: value minimum
    if (element < minimum){
                  ^extrema:9: error: reassignment to val
      min = element
          ^