welcome.lessons.welcome.array.search.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
  val max = nums(0)
  val min = nums(0)
  for (element <- nums){
    if (element > max){
      max = element
    }
    if (element < minimum){
      min = element
    }
  }
  return max- min
}